--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ server.port: 8080
 
 ## Comment above entirely and replace below for Postgres 
 ##    assuming DB is initialized with corresponding db, user, and credentials
-##    ---
+##    ---  updates
 # camunda:
 #   admin-user:
 #     id: demo
